--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -12,9 +12,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 1rem;
-    width: 100%;
-    max-width: 1200px;
+    /* padding: 0 1rem; */
+    /* width: 100%;
+    max-width: 1200px; */
     margin: 0 auto;
 } 
 
